infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  labels:
    name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: posts.delwinbest.com
    http:
      paths:
      - pathType: Prefix
        path: "/posts"
        backend:
          service:
            name: posts-srv
            port: 
              number: 4000
